// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/starts/Button renders a button 1`] = `
<button
  class="withStyles-u5urts-0 gqQEcA"
  type="primary"
>
  Button
</button>
`;

exports[`components/starts/Button renders a secondary button 1`] = `
<button
  class="withStyles-u5urts-0 hpEXTr"
  type="secondary"
>
  Button
</button>
`;

exports[`components/starts/Button renders an external link 1`] = `
<a
  class="withStyles-u5urts-0 gqQEcA"
  href="https://google.com"
  rel="noreferrer noopener"
  target="_blank"
  type="primary"
>
  Button
</a>
`;

exports[`components/starts/Button renders an interal link 1`] = `
<a
  class="withStyles-u5urts-0 gqQEcA"
  href="/about"
  type="primary"
>
  Button
</a>
`;
